# linux-wallpaperengine

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  BasicShaderLoader.cpp  BasicShaderLoader.h  CMakeLists.txt  PR_DESCRIPTION.md  README.md  common.h  de.json  en.json  es.json  fr.json  linux-wallpaperengine-core-config.cmake.in  main.cpp  nier_test.cpp  nier_test.h  protocols.sh  resources.qrc  ru.json  uk.json  version.h.in  version.lds  wallpaper_gui.py  wlr-layer-shell-unstable-v1.c  wlr-layer-shell-unstable-v1.h  xdg-shell-protocol.c  xdg-shell-protocol.h
.github/: FUNDING.yml
cmake/: Makefile  (+3 more)
src/common/: CMakeLists.txt
src/common/Steam/FileSystem/: FileSystem.cpp  FileSystem.h
src/common/WallpaperEngine/: Maths.h
src/common/WallpaperEngine/Data/Builders/: VectorBuilder.h
src/common/WallpaperEngine/Debugging/: CallStack.cpp
src/common/WallpaperEngine/Logging/: Log.cpp  Log.h
src/common/WallpaperEngine/Utils/: ScopeGuard.h  UUID.cpp
src/common/WallpaperEngine/WebBrowser/IPC/: Protocol.h
src/core/: CMakeLists.txt  linux-wallpaperengine-core.pc.in  version.h.in  version.lds
src/core/WallpaperEngine/: Configuration.cpp  Configuration.h  Context.cpp  Context.h  Project.cpp  Project.h
src/core/WallpaperEngine/Assets/: AssetLoadException.cpp  AssetLoadException.h  AssetLocator.cpp  AssetLocator.h
src/core/WallpaperEngine/Audio/: AudioContext.cpp  AudioContext.h  AudioPlayingDetector.cpp  AudioPlayingDetector.h  AudioStream.cpp  AudioStream.h  PlaybackRecorder.cpp  PlaybackRecorder.h
src/core/WallpaperEngine/Audio/Drivers/: AudioDriver.h  SDLAudioDriver.cpp  SDLAudioDriver.h
src/core/WallpaperEngine/Data/: JSON.cpp  JSON.h
src/core/WallpaperEngine/Data/Assets/: Package.h
src/core/WallpaperEngine/Data/Builders/: ColorBuilder.cpp  UserSettingBuilder.h
src/core/WallpaperEngine/Data/Dumpers/: StringPrinter.cpp  StringPrinter.h
src/core/WallpaperEngine/Data/Model/: Config.h  DynamicValue.cpp  DynamicValue.h  Effect.h  Material.h  Model.h  Object.h  Project.h  Property.h  ScriptedDynamicValue.cpp  Types.h  Wallpaper.h
src/core/WallpaperEngine/Data/Parsers/: ConfigParser.cpp  ConfigParser.h  DynamicValueParser.cpp  DynamicValueParser.h  EffectParser.cpp  EffectParser.h  MaterialParser.cpp  MaterialParser.h  ModelParser.cpp  ModelParser.h  ObjectParser.cpp  ObjectParser.h  PackageParser.cpp  PackageParser.h  ProjectParser.cpp  ProjectParser.h  PropertyParser.cpp  PropertyParser.h  ShaderConstantParser.cpp  ShaderConstantParser.h  TextureParser.cpp  TextureParser.h  UserSettingParser.cpp  UserSettingParser.h  WallpaperParser.cpp  WallpaperParser.h
src/core/WallpaperEngine/Data/Utils/: BinaryReader.cpp  BinaryReader.h  MemoryStream.h  TypeCaster.h
src/core/WallpaperEngine/Debugging/: CallStack.h
src/core/WallpaperEngine/FileSystem/: Container.cpp  Container.h
src/core/WallpaperEngine/FileSystem/Adapters/: Directory.cpp  Directory.h  MediaCover.cpp  MediaCover.h  Package.cpp  Types.h  Virtual.h
src/core/WallpaperEngine/Input/: MouseClickStatus.h
src/core/WallpaperEngine/Logging/: Log.cpp  Log.h
src/core/WallpaperEngine/Media/: MediaSource.h
src/core/WallpaperEngine/Render/: AlbumTexture.cpp  AlbumTexture.h  CFBO.cpp  CObject.cpp  CObject.h  CTexture.cpp  CTexture.h  CWallpaper.cpp  CWallpaper.h  Camera.cpp  Camera.h  FBOProvider.cpp  FBOProvider.h  RenderContext.cpp  RenderContext.h  TextureCache.cpp  TextureCache.h  TextureProvider.h  WallpaperState.cpp  WallpaperState.h
src/core/WallpaperEngine/Render/Helpers/: ContextAware.cpp  ContextAware.h
src/core/WallpaperEngine/Render/Objects/: CImage.cpp  CImage.h  CParticle.cpp  CParticle.h  CRenderable.cpp  CRenderable.h  CSound.cpp  CSound.h  CText.cpp  CText.h
src/core/WallpaperEngine/Render/Shaders/: GLSLContext.cpp  GLSLContext.h  Shader.cpp  ShaderUnit.cpp
src/core/WallpaperEngine/Render/Utils/: NoiseUtils.h
src/core/WallpaperEngine/Render/Wallpapers/: CScene.cpp  CScene.h  CVideo.cpp  CVideo.h  CWeb.cpp  CWeb.h
src/core/WallpaperEngine/Scripting/: ConsoleObject.cpp  ConsoleObject.h  EngineObject.cpp  EngineObject.h  InputObject.cpp  InputObject.h  SceneObject.cpp  ScriptEngine.cpp  ScriptEngine.h  ScriptPropertiesObject.cpp  ScriptableObject.cpp  ScriptableObject.h
src/core/WallpaperEngine/Scripting/Adapters/: ObjectAdapter.cpp  ObjectAdapter.h  ScriptableObjectAdapter.cpp  VectorAdapter.cpp  VectorAdapter.h
src/core/WallpaperEngine/Scripting/Modules/: ColorModule.cpp  MathModule.cpp  MathModule.h  ScriptModule.cpp  ScriptModule.h
src/core/WallpaperEngine/Utils/: UUID.cpp
src/core/WallpaperEngine/VideoPlayback/MPV/: GLPlayer.cpp  GLPlayer.h  MemoryStreamProtocol.cpp  MemoryStreamProtocol.h
src/core/WallpaperEngine/WebBrowser/CEF/: BrowserApp.h  RenderHandler.h  SubprocessApp.h  WPSchemeHandler.h  WPSchemeHandlerFactory.cpp  WPSchemeHandlerFactory.h
src/core/WallpaperEngine/WebBrowser/IPC/: WebManager.cpp  WebManager.h
src/core/frontends/: configuration.cpp  content.cpp  context.cpp  playlists.cpp  project.cpp  render.cpp
src/dev-viewer/: CMakeLists.txt  recording.cpp  recording.h
src/dev-viewer/WallpaperEngine/Development/: SimpleBackgroundViewer.cpp
src/frontend/: CMakeLists.txt  main.cpp
src/frontend/WallpaperEngine/Application/: ApplicationContext.cpp  ApplicationContext.h  ApplicationState.h  WallpaperApplication.cpp  WallpaperApplication.h
src/frontend/WallpaperEngine/Audio/: Pulseaudio.cpp  Pulseaudio.h
src/frontend/WallpaperEngine/Desktop/: Environment.cpp  Environment.h  Output.cpp  Output.h  ScreenAvailableNotification.h  ScreenUnavailableNotification.h  VirtualOutput.h
src/frontend/WallpaperEngine/Desktop/Universal/: Environment.cpp  Environment.h  GLFW.cpp  GLFW.h
src/glad/: CMakeLists.txt
src/glad/include/KHR/: khrplatform.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/webhelper/: CMakeLists.txt
src/webhelper/WallpaperEngine/WebBrowser/: WebBrowserHelper.cpp  WebBrowserHelper.h
tests/: CMakeLists.txt
tests/Fixtures/: BackgroundListFixture.h  PlaylistsFixture.h
tests/Tests/: MouseCoordinates.cpp
(+2701 files in other folders)
